adding gallery in page-single

--- a/page-single.html
+++ b/page-single.html
@@ -225,7 +225,38 @@
             <main>
                 <div class="section">
                     <div class="container">
+                        <div class="wrap">
+                            <div class="product dotgrid">
+                                <div class="wrapper">
+                                    <div class="image">
+                                        <div class="outer-main">                                            
+                                            <div class="main-image">
+                                                <div class="item">
+                                                    <img src="images/prod_01.jpg" alt="">
+                                                </div><!-- end item -->
+                                            </div><!-- end main-image -->
+                                        </div><!-- end outer-main -->
+                                        <div class="outer-thumb ob-cover">
+                                            <div class="thumbnail-image">
+                                                <div class="wrap">
+                                                    <div class="item">
+                                                        <div class="thumb-wrap">
+                                                            <img src="images/prod_01.jpg" alt="">
+                                                        </div><!-- end thumb-wrap -->
+                                                    </div><!-- end item -->
+                                                </div><!-- end wrap --> 
+                                            </div><!-- end thumbnail-image -->
+                                        </div><!-- end outer-thumb -->
+                                    </div><!-- end image -->
+                                    <div class="summary">
 
+                                    </div><!-- end summary -->
+                                </div><!-- end wrapper -->
+                            </div><!-- end product.dotgrid -->
+                            <div class="product detail">
+
+                            </div><!-- end product.detail -->
+                        </div><!-- end wrap -->
                     </div><!-- end container -->
                 </div><!-- end section -->
             </main>
